Fixing navbar and horizontal scroll

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #navbarNav {
-  padding: 20px 400px;
+  padding: 20px;
   font-size: 25px;
   background: var(--background);
 }
@@ -145,6 +145,14 @@ h2 {
     align-items: center;
     text-align: center;
   }
+}
+
+#navbarNav a {
+  transition: all 200ms;
+}
+
+#navbarNav a:hover {
+  transform: translateY(-10px);
 }
 
 footer .contact-box {
